// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Auth - Login should disable and show correct login button text when logging in 1`] = `
<pf-login-page
  fb={[Function FormBuilder]}
  gettingMarketingImage$={[Function Store]}
  gettingMarketingImageError$={[Function Store]}
  gettingMarketingImageSuccess$={[Function Store]}
  login$={[Function Observable]}
  loginError$={[Function Observable]}
  loginErrorSubscription={[Function Subscriber]}
  loginForm={[Function FormGroup]}
  loginLogo={[Function String]}
  loginStore={[Function Store]}
  loginSuccess$={[Function Observable]}
  marketingImage$={[Function Store]}
  nextPage="undefined"
  route={[Function Object]}
  store={[Function Store]}
  submitted="false"
>
  <div
    class="d-flex flex-row"
  >
    <div
      class="p-2"
    >
      <div
        class="image-container"
      >
        
        
        
        <img
          class="image-container"
          src="null"
        />
        
        
      </div>
    </div>
    <div
      class="p-2"
    >
      <form
        class="h-100 ng-untouched ng-pristine ng-invalid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        <div
          class="d-flex flex-column p-5 h-100 justify-content-center"
        >
          
          <div
            class="pb-1 text-uppercase font-weight-bold"
          >
             Email Address 
          </div>
          <div
            class="form-group pb-3"
          >
            <input
              class="form-group login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              id="email"
              name="email"
              ng-reflect-name="email"
              type="email"
            />
          </div>
          <div
            class="pb-1 text-uppercase font-weight-bold"
          >
             Password 
          </div>
          <div
            class="form-group pb-4"
          >
            <input
              class="form-control login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              id="password"
              name="password"
              ng-reflect-name="password"
              type="password"
            />
          </div>
          <div
            class="pb-1 d-flex align-self-center"
          >
            <button
              class="btn login-button disabled"
              disabled=""
              type="submit"
            >
              
              
              <span>
                LOGGING IN...
              </span>
            </button>
          </div>
          <div
            class="p-0 d-flex align-self-center"
          >
            <a
              href="forgot-password"
            >
              Forgot Password?
            </a>
          </div>
        </div>
      </form>
    </div>
  </div>
</pf-login-page>
`;

exports[`Auth - Login should show error notification on submitError 1`] = `
<pf-login-page
  fb={[Function FormBuilder]}
  gettingMarketingImage$={[Function Store]}
  gettingMarketingImageError$={[Function Store]}
  gettingMarketingImageSuccess$={[Function Store]}
  login$={[Function Observable]}
  loginError$={[Function Observable]}
  loginErrorSubscription={[Function Subscriber]}
  loginForm={[Function FormGroup]}
  loginLogo={[Function String]}
  loginStore={[Function Store]}
  loginSuccess$={[Function Observable]}
  marketingImage$={[Function Store]}
  nextPage="undefined"
  route={[Function Object]}
  store={[Function Store]}
  submitted="false"
>
  <div
    class="d-flex flex-row"
  >
    <div
      class="p-2"
    >
      <div
        class="image-container"
      >
        
        
        
        <img
          class="image-container"
          src="null"
        />
        
        
      </div>
    </div>
    <div
      class="p-2"
    >
      <form
        class="h-100 ng-untouched ng-pristine ng-invalid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        <div
          class="d-flex flex-column p-5 h-100 justify-content-center"
        >
          
          <p
            class="alert-danger error-container text-center p-3"
          >
             The email and password combination that you've entered is incorrect. 
          </p>
          <div
            class="pb-1 text-uppercase font-weight-bold"
          >
             Email Address 
          </div>
          <div
            class="form-group pb-3"
          >
            <input
              class="form-group login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              id="email"
              name="email"
              ng-reflect-name="email"
              type="email"
            />
          </div>
          <div
            class="pb-1 text-uppercase font-weight-bold"
          >
             Password 
          </div>
          <div
            class="form-group pb-4"
          >
            <input
              class="form-control login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              id="password"
              name="password"
              ng-reflect-name="password"
              type="password"
            />
          </div>
          <div
            class="pb-1 d-flex align-self-center"
          >
            <button
              class="btn login-button disabled"
              disabled=""
              type="submit"
            >
              
              <span>
                LOG IN
              </span>
              
            </button>
          </div>
          <div
            class="p-0 d-flex align-self-center"
          >
            <a
              href="forgot-password"
            >
              Forgot Password?
            </a>
          </div>
        </div>
      </form>
    </div>
  </div>
</pf-login-page>
`;

exports[`Auth - Login should show login when page is loaded 1`] = `
<pf-login-page
  fb={[Function FormBuilder]}
  gettingMarketingImage$={[Function Store]}
  gettingMarketingImageError$={[Function Store]}
  gettingMarketingImageSuccess$={[Function Store]}
  login$={[Function Observable]}
  loginError$={[Function Observable]}
  loginErrorSubscription={[Function Subscriber]}
  loginForm={[Function FormGroup]}
  loginLogo={[Function String]}
  loginStore={[Function Store]}
  loginSuccess$={[Function Observable]}
  marketingImage$={[Function Store]}
  nextPage="undefined"
  route={[Function Object]}
  store={[Function Store]}
  submitted="false"
>
  <div
    class="d-flex flex-row"
  >
    <div
      class="p-2"
    >
      <div
        class="image-container"
      >
        
        
        
        <img
          class="image-container"
          src="null"
        />
        
        
      </div>
    </div>
    <div
      class="p-2"
    >
      <form
        class="h-100 ng-untouched ng-pristine ng-invalid"
        ng-reflect-form="[object Object]"
        novalidate=""
      >
        <div
          class="d-flex flex-column p-5 h-100 justify-content-center"
        >
          
          <div
            class="pb-1 text-uppercase font-weight-bold"
          >
             Email Address 
          </div>
          <div
            class="form-group pb-3"
          >
            <input
              class="form-group login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="email"
              id="email"
              name="email"
              ng-reflect-name="email"
              type="email"
            />
          </div>
          <div
            class="pb-1 text-uppercase font-weight-bold"
          >
             Password 
          </div>
          <div
            class="form-group pb-4"
          >
            <input
              class="form-control login-input ng-untouched ng-pristine ng-invalid"
              formcontrolname="password"
              id="password"
              name="password"
              ng-reflect-name="password"
              type="password"
            />
          </div>
          <div
            class="pb-1 d-flex align-self-center"
          >
            <button
              class="btn login-button disabled"
              disabled=""
              type="submit"
            >
              
              <span>
                LOG IN
              </span>
              
            </button>
          </div>
          <div
            class="p-0 d-flex align-self-center"
          >
            <a
              href="forgot-password"
            >
              Forgot Password?
            </a>
          </div>
        </div>
      </form>
    </div>
  </div>
</pf-login-page>
`;
